log

Thu 14 Mar 2024 07:57:43 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
672ae03
Thu 14 Mar 2024 08:09:35 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 20/70
9758f3f
Thu 14 Mar 2024 08:24:18 PM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:62:42: error: invalid operands to binary * (have ‘int *’ and ‘long unsigned int’)
   62 |   int *nuevoarr = (int *) malloc(newSize * sizeof(int))
      |                                          ^
exercises.c:63:3: error: expected ‘,’ or ‘;’ before ‘if’
   63 |   if (nuevoarr == NULL) (EXIT_FAILURE);
      |   ^~
exercises.c:64:18: error: comparison between pointer and integer [-Werror]
   64 |   for (i = 0 ; i < newSize ; i++)
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
1c962bd
